@@ -19,6 +19,7 @@ package org.springframework.ai.chat.client.advisor;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
@@ -141,18 +142,20 @@ public final class PromptChatMemoryAdvisor implements BaseChatMemoryAdvisor {
 	@Override
 	public ChatClientResponse after(ChatClientResponse chatClientResponse, AdvisorChain advisorChain) {
 		List<Message> assistantMessages = new ArrayList<>();
-		// Handle streaming case where we have a single result
-		if (chatClientResponse.chatResponse() != null && chatClientResponse.chatResponse().getResult() != null
-				&& chatClientResponse.chatResponse().getResult().getOutput() != null) {
-			assistantMessages = List.of((Message) chatClientResponse.chatResponse().getResult().getOutput());
-		}
-		else if (chatClientResponse.chatResponse() != null) {
-			assistantMessages = chatClientResponse.chatResponse()
-				.getResults()
+		// Extract assistant messages from chat client response.
+		// Processes all results from getResults() which automatically handles both single
+		// and multiple
+		// result scenarios (since getResult() == getResults().get(0)). Uses Optional
+		// chaining for
+		// null safety and returns empty list if no results are available.
+		assistantMessages = Optional.ofNullable(chatClientResponse)
+			.map(ChatClientResponse::chatResponse)
+			.filter(response -> response.getResults() != null && !response.getResults().isEmpty())
+			.map(response -> response.getResults()
 				.stream()
 				.map(g -> (Message) g.getOutput())
-				.toList();
-		}
+				.collect(Collectors.toList()))
+			.orElse(List.of());
 
 		if (!assistantMessages.isEmpty()) {
 			this.chatMemory.add(this.getConversationId(chatClientResponse.context(), this.defaultConversationId),
